--- a/server/apps/distributed-app/docs/modules/ROOT/pages/operate/security.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/operate/security.adoc
@@ -104,6 +104,16 @@ outdated dependencies.
 
 We follow the standard procedures within the ASF regarding link:https://apache.org/security/committers.html#vulnerability-handling[vulnerability handling]
 
+=== CVE-2021-44228: STARTTLS command injection in Apache JAMES
+
+Apache James distribution prior to release 3.7.1 is vulnerable to a buffering attack relying on the use of the STARTTLS command.
+
+Fix of CVE-2021-38542, which solved similar problem from Apache James 3.6.1, is subject to a parser differential and do not take into account concurrent requests.
+
+*Severity*: Moderate
+
+*Mitigation<*: We recommend to upgrade to Apache James 3.7.1 or higher, which fixes this vulnerability.
+
 === CVE-2021-38542: Apache James vulnerable to STARTTLS command injection (IMAP and POP3)
 
 Apache James prior to release 3.6.1 is vulnerable to a buffering attack relying on the use of the STARTTLS
